--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
             font-weight: bold;
             opacity: 0.7;
             position: absolute;
-            top: 20px;
+            top: 80px;
             right: 30px;
             color: #555;
+            text-align: center;
+            width: 60px;
+        }
+        .riddle-egg {
+            position: absolute;
+            top: 20px;
+            right: 30px;
         }
         
         h1 {
@@ -128,6 +135,7 @@
     <div id="chart-container" class="chart-race-container">
         <div class="chart-title">Progressiomètre</div>
         <div class="riddle-display"></div>
+        <div class="riddle-egg"><img id="egg" width="60" /></div>
         <div class="controls">
             <button id="play-pause">Pause</button>
             <button id="reset">Reset</button>
@@ -196,6 +204,7 @@
             svg.attr("transform", `translate(${margin.left},${margin.top})`);
 
             const currentRiddle = riddles[riddleIndex];
+            d3.select('#egg').attr("src", "oeufs/" + currentRiddle + ".svg");
             d3.select('.riddle-display').text(currentRiddle);
             
             // Get data for current riddle and sort by score
