--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
         function textTrunc(d, barLength, maxWidth) {
             var maxTeamLength;
             if (insideBar(d, barLength, maxWidth)) {
-                maxTeamLength = (barLength - 30)
+                maxTeamLength = (barLength - 40)
             } else {
-                maxTeamLength = maxWidth - barLength;
+                maxTeamLength = maxWidth - barLength - 30;
             }
             maxTeamCar = maxTeamLength / 8;
             if (d.team.length < maxTeamCar) {
